Android: improve Irro discovery activity
Make it possible to cancel Irro discovery early and enter Irro host
manually.

--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         tools:context=".MainActivity">
 
     <ProgressBar
-            android:id="@+id/progressBar_cyclic"
+            android:id="@+id/irro_discovery_progress_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:minHeight="50dp"
@@ -28,7 +28,19 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/progressBar_cyclic"
+            app:layout_constraintBottom_toTopOf="@+id/irro_discovery_progress_bar"
             android:textSize="24sp"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
+            android:id="@+id/cancel_discovery_button"
+            android:layout_gravity="end|bottom"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="32dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
